# Renderer

./: CMakeLists.txt  readme.md
cmake/modules/: metal.cmake
docs/engine/: backend.md
docs/engine/cpu/: cpu_wireframe.md  transformations.md
include/: globals.h
include/engine/: control_model_interface.h  gui.h  view_controller.h  window.h
include/engine/backend/: backend.h
include/engine/backend/cpu/: cpu.h  cpu_wireframe.h  transformations.h
include/scene/: camera.h  object.h  scene.h
src/: main.cpp
src/engine/: control_model_interface.cpp  gui.cpp  view_controller.cpp  window.cpp
src/engine/backend/cpu/: cpu.cpp  cpu_wireframe.cpp  transformations.cpp
src/scene/: camera.cpp  object.cpp  scene.cpp
tests/: test_maths.cpp
